<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_viewID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/crime_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crime_title_hint" />

    <TextView
        android:id="@+id/detail_viewID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_detail_label"
        style="?android:listSeparatorTextViewStyle"/>

    <Button
        android:id="@+id/date_buttonID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        />
    
    <CheckBox
        android:id="@+id/solved_checkboxID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/crime_solved_label"
        />

    <Button
        android:id="@+id/suspect_buttonID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suspect_label"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />

    <Button
        android:id="@+id/crimeReport_buttonID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crimeReport_label"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />

</LinearLayout>
